+ psr-4 class package spacification

--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,10 @@
             "email": "davidcallizaya@gmail.com"
         }
     ],
+    "autoload": {
+        "psr-4": {
+            "BowerArtisan\\": "src/BowerArtisan/"
+        }
+    },
     "require": {}
 }
